Working on fixes for the JavaPlugin to run web projects